@@ -2,8 +2,9 @@ s3fuse (0.15) unstable; urgency=low
 
   * Removed known-issue notes on MIME mapping and Google Cloud Storage
     Manager folder representation incompatibility.
+  * Removed libxml++ dependency.
 
- -- Tarick Bedeir <tarick@bedeir.com>  Tue, 21 May 2013 21:25:12 -0600
+ -- Tarick Bedeir <tarick@bedeir.com>  Web, 07 Aug 2013 15:44:59 -0400
 
 s3fuse (0.14) unstable; urgency=low
 
